<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/productFragment">

    <fragment
        android:id="@+id/productFragment"
        android:name="com.example.ecommerceapp.ui.product_list.ProductFragment"
        android:label="@string/products" >
        <action
            android:id="@+id/actionGoToProductDetails"
            app:destination="@id/productDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/productDetailsFragment"
        android:name="com.example.ecommerceapp.ui.product_details.ProductDetailsFragment"
        android:label="@string/details" >
        <argument
            android:name="productId"
            app:argType="string"
            android:defaultValue="productId" />
    </fragment>
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.ecommerceapp.ui.settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />
</navigation>